--- a/public/assets/loginSignUpStyle.css
+++ b/public/assets/loginSignUpStyle.css
@@ -66,7 +66,7 @@
     width: 209px;
     margin-top: 32px;
     display: none;
-    color: #96a3ab;
+    color: #5d6469;
     text-align: center;
     font-size: 16px;
     font-weight: 400;
